@@ -38,6 +38,7 @@ ApplicationNameKey=Application name
 ApplicationModeKey=Application mode
 
 ALLOW_UNDEFINED_VARIABLESKey = Allow undefined variables
+DYNAMICSCRIPTKey = Dynamic script
 DYNAMIC_VARIABLE_HANDLINGKey = Dynamic variable handling
 CHOOSE_NEXT_PERFORMERKey=Choose next performer
 USE_PROCESS_CONTEXT_ONLYKey = Use process context only
