@@ -31,6 +31,7 @@
 #Missing translation -> ApplicationModeKey=Application mode
 
 #Missing translation -> ALLOW_UNDEFINED_VARIABLESKey = Allow undefined variables
+#Missing translation -> DYNAMICSCRIPTKey = Dynamic script
 #Missing translation -> DYNAMIC_VARIABLE_HANDLINGKey = Dynamic variable handling
 #Missing translation -> CHOOSE_NEXT_PERFORMERKey=Choose next performer
 #Missing translation -> USE_PROCESS_CONTEXT_ONLYKey = Use process context only
