@@ -1,5 +1,5 @@
 # Together Workflow Editor 
-# Copyright (C) 2011 Together Teamsolutions Co., Ltd.
+3# Copyright (C) 2011 Together Teamsolutions Co., Ltd.
 # 
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -31,6 +31,7 @@ ApplicationNameKey=Ime aplikacije
 ApplicationModeKey=Mode aplikacije
 
 ALLOW_UNDEFINED_VARIABLESKey = Dozvoli nedefinisane varijable
+DYNAMICSCRIPTKey = Dinami\u010Dki skript
 DYNAMIC_VARIABLE_HANDLINGKey = Obrada dinami\u010Dkih varijabli
 CHOOSE_NEXT_PERFORMERKey=Izaberi slede\u0107eg izvr\u0161ioca
 USE_PROCESS_CONTEXT_ONLYKey = Koristi samo kontekst procesa
