@@ -69,7 +69,7 @@ BackgroundColor = R=255,G=255,B=215
 #HideSubElements.XMLGroupPanel.Lane = NodeGraphicsInfos
 #HideSubElements.XMLGroupPanel.Pool = NodeGraphicsInfos
 
-HideElements.XMLTablePanel.ExtendedAttributes.Name = JaWE_CONFIGURATION JaWE_TYPE EDITING_TOOL EDITING_TOOL_VERSION VariableToProcess_UPDATE VariableToProcess_VIEW ToolAgentClass AppName AppMode ALLOW_UNDEFINED_VARIABLES USE_PROCESS_CONTEXT_ONLY CREATE_ASSIGNMENTS TRANSIENT DELETE_FINISHED XFORMS_FILE CHECK_FOR_FIRST_ACTIVITY CHECK_FOR_CONTINUATION REDIRECT_AFTER_PROCESS_END DYNAMIC_VARIABLE_HANDLING CHOOSE_NEXT_PERFORMER MAX_ASSIGNMENTS WORKLOAD_FACTOR IS_MANDATORY MIN_LENGTH
+HideElements.XMLTablePanel.ExtendedAttributes.Name = JaWE_CONFIGURATION JaWE_TYPE EDITING_TOOL EDITING_TOOL_VERSION VariableToProcess_UPDATE VariableToProcess_VIEW ToolAgentClass AppName AppMode ALLOW_UNDEFINED_VARIABLES USE_PROCESS_CONTEXT_ONLY CREATE_ASSIGNMENTS TRANSIENT DYNAMICSCRIPT DELETE_FINISHED XFORMS_FILE CHECK_FOR_FIRST_ACTIVITY CHECK_FOR_CONTINUATION REDIRECT_AFTER_PROCESS_END DYNAMIC_VARIABLE_HANDLING CHOOSE_NEXT_PERFORMER MAX_ASSIGNMENTS WORKLOAD_FACTOR IS_MANDATORY MIN_LENGTH
 
 #ShowColumns.XMLTablePanel.Activities = Id Name Performer Type StartMode FinishMode Deadlines
 #ShowColumns.XMLTablePanel.ActivitySets = Id Activities Transitions
